--- a/src/NetStreams.ControlCenter/Server/NetStreams.ControlCenter.TelemetryProcessor/appsettings.json
+++ b/src/NetStreams.ControlCenter/Server/NetStreams.ControlCenter.TelemetryProcessor/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "SqlConnectionString": "Server=127.0.0.1,1401;Database=WorkflowAuditing;User Id=SA;Password=ReallyCoolPassword!;",
   "NetStreamTelemetryStreamProcessor": {
     "BootstrapServers": "localhost:9092",
     "From": "netstreams.controlcenter.telemetry",
@@ -6,4 +7,3 @@
     "AutoOffsetReset": "Latest"
   }
 }
-
