--- a/src/NetStreams.ControlCenter/Libs/NetStreams.DependencyInjection.Extensions/NetStreams.DependencyInjection.Extensions.csproj
+++ b/src/NetStreams.ControlCenter/Libs/NetStreams.DependencyInjection.Extensions/NetStreams.DependencyInjection.Extensions.csproj
@@ -5,7 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="NetStreams" Version="3.0.3" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.2" />
+    <PackageReference Include="NetStreams" Version="3.0.14" />
   </ItemGroup>
 
 </Project>
